<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/registration_sreen"
            android:layout_weight="0.2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:background="#ffff"
            android:layout_weight="0.8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/registerText"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:text="@string/register_text" />
                <TextView
                    android:id="@+id/helpText"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="#0000FF"
                    android:textStyle="bold"
                    android:paddingRight="30dp"
                    android:layout_gravity="right"
                    android:text="@string/help_text" />
            </LinearLayout>
            <TextView
                android:id="@+id/nameText"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="16dp"
                android:textSize="16sp"
                android:text="@string/name_text" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"

                >

                <EditText
                    android:id="@+id/name"
                    android:layout_centerVertical="true"
                    android:inputType="textPersonName"
                    android:text=""
                    android:padding="10dp"
                    android:background="@drawable/edit_text_border"
                    android:textColor="@color/black"
                    android:layout_height="40dp"
                    android:layout_width="match_parent">

                    <requestFocus />

                </EditText>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                >
            <Spinner
                android:id="@+id/spinnerGender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/gender_arrays"
                android:layout_weight="0.5"
                android:spinnerMode="dropdown"
                android:padding="0dp"
                android:prompt="@string/gender_prompt" />
            <Spinner
                android:id="@+id/spinnerAge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/age_arrays"
                android:layout_weight="0.5"
                android:spinnerMode="dropdown"
                android:padding="10dp"
                android:prompt="@string/age_prompt" />
            </LinearLayout>

            <TextView
                android:id="@+id/emailText"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="16dp"
                android:textSize="16sp"
                android:text="Email" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                >

                <EditText
                    android:id="@+id/email"
                    android:layout_centerVertical="true"
                    android:inputType="textPersonName"
                    android:text=""
                    android:padding="10dp"
                    android:background="@drawable/edit_text_border"
                    android:textColor="@color/black"
                    android:layout_height="40dp"
                    android:layout_width="match_parent">

                </EditText>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/phoneText"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="16dp"
                android:textSize="16sp"
                android:text="@string/phone_text" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                >

                <EditText
                    android:id="@+id/phone"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:text=""
                    android:padding="10dp"
                    android:background="@drawable/edit_text_border"
                    android:textColor="@color/black"
                    android:layout_height="40dp"
                    android:layout_width="match_parent">

                </EditText>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/passwordText"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="16dp"
                android:textSize="16sp"
                android:text="Password" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                >

                <EditText
                    android:id="@+id/password"
                    android:layout_centerVertical="true"
                    android:inputType="textVisiblePassword"
                    android:text=""
                    android:padding="10dp"
                    android:background="@drawable/edit_text_border"
                    android:textColor="@color/black"
                    android:layout_height="50dp"
                    android:layout_width="match_parent">

                </EditText>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_register"
                android:text="@string/register_text"
                android:textColor="@color/white"
                android:background="#0000FF"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/orText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="or" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_login"
                android:text="@string/login_text"
                android:textColor="@color/white"
                android:background="#0000FF"
                android:layout_margin="16dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>